--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,6 +13,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/katex.min.css" integrity="sha384-MlJdn/WNKDGXveldHDdyRP1R4CTHr3FeuDNfhsLPYrq2t0UBkUdK2jyTnXPEK1NQ" crossorigin="anonymous">
 
@@ -33,39 +34,20 @@
 <body>
     {% block body %}{% endblock %}
 
+
+
+    <!--Импорт katex--> 
     <script src="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/katex.min.js" integrity="sha384-VQ8d8WVFw0yHhCk5E8I86oOhv48xLpnDZx5T9GogA/Y84DcCKWXDmSDfn13bzFZY" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/contrib/auto-render.min.js" integrity="sha384-+XBljXPPiv+OzfbB3cVmLHf4hdUFHlWNZN5spNQ7rmHTXpd7WvJum6fIACpNNfIR" crossorigin="anonymous"></script>
-    <script src="{{ url_for('static', filename='js/katexRender.js') }}"></script>
     
-    <script>
-      function updateLineNumbers(textarea, lineNumbers) {
-      var lines = textarea.value.split('\n').length;
-      var lineNumberHtml = '';
-      for (var i = 1; i <= lines; i++) {
-        lineNumberHtml += i + '<br>';
-      }
-      lineNumbers.html(lineNumberHtml);
-    }
+    <!--Реализация рендера формул--> 
+    <script src="{{ url_for('static', filename='js/katexRender.js') }}"></script>
 
-    $(document).ready(function() {
-      var textarea = $('#inputText');
-      var lineNumbers = $('.line-numbers');
+    <!--Открытие меню при нажатии кнопки AI-->
+    <script src="{{ url_for('static', filename='js/AIButtonPressAction.js') }}"></script>
 
-      // Инициализация номеров строк
-      updateLineNumbers(textarea[0], lineNumbers);
-
-      // Обновление при изменении содержимого textarea
-      textarea.on('input', function() {
-        updateLineNumbers(this, lineNumbers);
-      });
-
-      // Синхронизация прокрутки номеров строк с textarea
-      textarea.scroll(function() {
-        lineNumbers.css('transform', 'translateY(-' + this.scrollTop + 'px)');
-      });
-    });
-
-    </script>
+    <!--Открытие меню при нажатии правой кнопки мыши-->
+    <script src="{{ url_for('static', filename='js/rightClickAction.js') }}"></script>
 
 </body>
 </html>
