--- a/static/css/themes.css
+++ b/static/css/themes.css
@@ -2,7 +2,7 @@
     --left-side-color: #181c20;
     --text-area-color: #1c2127;
     --top-side-color: #2c313c;
-    --text-color: #ffffff;
+    --text-color: #dadada;
     --border-color: #35393e;
     --icon-color: #bec6cf;
     --icon-hover-color: #292d31;
