Добавил функции для меню пкм

--- a/static/css/rightClickMenu.css
+++ b/static/css/rightClickMenu.css
@@ -1,94 +1,110 @@
 #context-menu {
-    background-color: var(--left-side-color);
-    box-shadow: 0 0 20px rgba(37, 40, 42, 0.22);
-    color: var(--text-color);
-    
-    width: 10em;
-    padding: 10px 12px 10px 12px;
-    font-size: 1.3rem;
-    
-    position: fixed;
-    visibility: hidden;
+  background-color: var(--left-side-color);
+  box-shadow: 0 0 20px rgba(37, 40, 42, 0.22);
+  color: var(--text-color);
+  
+  width: 10em;
+  padding: 10px 12px 10px 12px;
+  font-size: 1.3rem;
+  
+  position: fixed;
+  visibility: hidden;
 
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 
-    border-style: solid;
-    border-width: 1px;
-    border-color: #3f3f3f;
-    border-radius: 15px !important;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #3f3f3f;
+  border-radius: 15px !important;
 }
 
 .pkm-item {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding: 5px 9px 5px 9px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  padding: 5px 9px 5px 9px;
 
 }
 
 .pkm-item:hover {
-    background-color: var(--icon-hover-color);
-    border-radius: 7px;
-    cursor: default;
+  background-color: var(--icon-hover-color);
+  border-radius: 7px;
+  cursor: default;
 }
 
 .line {
-    background-color: #3f3f3f;
-    height: 1px;
-    width: 100%;
-    margin: 10px 0 10px 0
+  background-color: #3f3f3f;
+  height: 1px;
+  width: 100%;
+  margin: 10px 0 10px 0
 }
 
-#draggable-menu {
+#drawingWindow {
   position: absolute;
-  width: 200px;
-  background-color: #f1f1f1;
-  border: 1px solid #d3d3d3;
+  width: 500px;
+  height: 260px;
+  border: 1px solid #ccc;
+  background-color: #fff;
   z-index: 1000;
-  display: none;
+  overflow: hidden; /* Ensure content is handled properly */
+  display: flex;
+  flex-direction: column;
 }
 
-.draggable-header {
+.drawingWindowHeader {
+
   padding: 10px;
   cursor: move;
-  background-color: #2196F3;
-  color: #fff;
+  background-color: #f1f1f1;
+  border-bottom: 1px solid #ccc;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.draggable-content {
-  padding: 10px;
+.drawingWindowBody {
+  padding: 0px 5px 0px 5px;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  align-self: center;
+  overflow: hidden; /* Ensure content is handled properly */
 }
 
-.close-button {
-    float: right;
-    font-size: 20px;
-    font-weight: bold;
-    cursor: pointer;
-    color: #fff;
-  }
-  
-  .close-button:hover {
-    color: #ff0000;
-  }
+#drawingCanvas {
+  align-self: center;
+  justify-self: center;
+  width: 100%;
+  height: 130px; /* Ensure the canvas takes up the full height of its container */
+  border: 1px solid #ccc;
+  box-sizing: border-box; /* Ensure padding and border are included in the element's total width and height */
+  position: relative;
+}
 
-  #draggable-menu {
-    position: absolute;
-    width: 300px;
-    height: 300px;
-    border: 1px solid #ccc;
-    background-color: #fff;
-    z-index: 1000;
-    min-width: 250px; /* Минимальная ширина */
-    min-height: 100px; /* Минимальная высота */
-    max-width: 1000px;
-    max-height: 600px;
-  }
-  
-  .resizable-handle {
-    width: 10px;
-    height: 10px;
-    background-color: #ccc;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    cursor: se-resize;
-  }
+#canvasElement {
+  width: 100%;
+  height: 100%;
+  display: block; /* Ensure the canvas is displayed as a block element */
+}
+
+#closeDrawingWindow {
+  cursor: pointer;
+}
+
+#divandinp {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  gap: 0;
+}
+
+#saveDrawing, #clearDrawing {
+  margin: 0;
+  padding: 0;
+  flex: 1; /* Это заставит кнопки занимать равное пространство */
+  width: 49%; /* Убедитесь, что каждая кнопка занимает 50% ширины */
+  box-sizing: border-box; /* Включает padding и border в общую ширину и высоту элемента */
+}
+
+.hidden {
+  display: none;
+}
