--- a/static/css/textarea.css
+++ b/static/css/textarea.css
@@ -23,6 +23,7 @@
     resize: none;
     padding: 14px;
     box-sizing: border-box;
+    color: var(--text-color);
     background-color: var(--text-area-color);
     border: none;
     width: 100%;
@@ -40,6 +41,7 @@
     padding: 14px;
     height: 93%;
     border-style: solid;
+    color: var(--text-color);
     border-color: var(--border-color);
     border-radius: 10px;
     border-left: none;
