--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,10 +3,10 @@
 <head>
   <style>
     body {
-      background-color: #1c2127;
+      background-color: #1c2127 !important;
     }
   </style>
-  
+
   <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/containers.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/foldermenu.css') }}">
@@ -51,6 +51,11 @@
 
     <!--Функции кнопок контекстного меню `0_`0 -->
     <script src="{{ url_for('static', filename='js/contextMenuButtons/save.js') }}"></script>
-    
+    <script src="{{ url_for('static', filename='js/contextMenuButtons/drawMenu.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/contextMenuButtons/clear.js') }}"></script>    
+    <script src="{{ url_for('static', filename='js/contextMenuButtons/copy.js') }}"></script>    
+    <script src="{{ url_for('static', filename='js/contextMenuButtons/cut.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/contextMenuButtons/paste.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/contextMenuButtons/selectAll.js') }}"></script>
 </body>
 </html>
