--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
 
     <div class="topBar">
       <img class="svg-icon" id="sunIcon" src="{{ url_for('static', filename='svg/sun-svgrepo-com(1).svg')}}">
-      <img class="images" id="profilePic" src="{{ url_for('static', filename='images/images.jpg')}}">
+      <img class="images" id="profilePic" src="{{ url_for('static', filename='images/waytoodunk.gif')}}">
       <img class="svg-icon" id="moreIcon" src="{{ url_for('static', filename='svg/text-align-justify-svgrepo-com.svg')}}">
     </div>
 
