--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/leftsidebar.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/themes.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/rightClickMenu.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/hamburgermenu.css') }}">
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
