--- a/templates/info.html
+++ b/templates/info.html
@@ -109,6 +109,7 @@
 
     <img class="svg-icon" id="banana-cat" src="{{ url_for('static', filename='images/banana-cat-running.gif') }}">
 
+    <img class="svg-icon" id="glorp" style="position: absolute; right: 50px; top: 50px" src="{{ url_for('static', filename='images/glorp-fucking-dies.gif') }}">
 </body>
 
 <script>
