--- a/templates/layout.html
+++ b/templates/layout.html
@@ -50,6 +50,9 @@
     <!--Открытие меню при нажатии правой кнопки мыши-->
     <script src="{{ url_for('static', filename='js/rightClickAction.js') }}"></script>
 
+    <!--Открытие гамбургер меню и функционал для его закрытия при нажатии в рандомные места 0_0-->
+    <script src="{{ url_for('static', filename='js/hamburgerMenu.js') }}"></script>
+
     <!--Функции кнопок контекстного меню `0_`0 -->
     <script src="{{ url_for('static', filename='js/contextMenuButtons/save.js') }}"></script>
     <script src="{{ url_for('static', filename='js/contextMenuButtons/drawMenu.js') }}"></script>
