--- a/static/css/leftsidebar.css
+++ b/static/css/leftsidebar.css
@@ -14,6 +14,7 @@
 .t3 {
     display: flex;
     flex-direction: column;
+    align-content: center;
     justify-content: end;
     padding-bottom: 10px;
     gap: 5px;
