--- a/templates/info.html
+++ b/templates/info.html
@@ -71,6 +71,62 @@
         margin-left: 430px;
         animation: slide 5s linear infinite;
     }
+
+#menu {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.3s, visibility 0.3s;
+}
+
+#menu ul {
+  list-style-type: none;
+  padding: 0;
+  border-radius: 50%;
+  background-color: #292d31;
+  color: #fff;
+  width: 200px;
+  height: 200px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+
+}
+
+#menu ul li {
+  flex-basis: 25%; /* каждому пункту меню равно 25% ширины */
+  margin: 0;
+  padding: 10px;
+  text-align: center;
+}
+
+#menu ul li a {
+  display: block;
+  padding: 2px;
+  border-radius: 50%;
+  width: 100%;
+  height: 60%;
+}
+
+#menu ul li a:hover {
+  background-color: #292d31;
+  color: #333;
+}
+
+/* добавленные стили для картинок */
+#menu ul li a img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin: 0 auto;
+}
     </style>
 
 </head>
@@ -110,6 +166,7 @@
     <img class="svg-icon" id="banana-cat" src="{{ url_for('static', filename='images/banana-cat-running.gif') }}">
 
     <img class="svg-icon" id="glorp" style="position: absolute; right: 50px; top: 50px" src="{{ url_for('static', filename='images/glorp-fucking-dies.gif') }}">
+
 </body>
 
 <script>
