cats: apel, eplodi, breki danci, glorp, juh and maybe even more, who knows

--- a/templates/info.html
+++ b/templates/info.html
@@ -167,6 +167,14 @@
 
     <img class="svg-icon" id="glorp" style="position: absolute; right: 50px; top: 50px" src="{{ url_for('static', filename='images/glorp-fucking-dies.gif') }}">
 
+    <img class="svg-icon" id="juh" style="position: absolute; left: 60px; top: 120px; height: 160px;" src="{{ url_for('static', filename='images/cat-twitch.gif') }}">
+
+    <img class="svg-icon" id="apel" style="position: absolute; left: 140px; bottom: 50px; height: 160px;" src="{{ url_for('static', filename='images/aplep-cat-apple-cat.gif') }}">
+
+    <img class="svg-icon" id="catfuckingexplodes" style="position: absolute; right: 0px; bottom: 0px; height: 160px;" src="{{ url_for('static', filename='images/cat-explosion.gif') }}">
+
+    <img class="svg-icon" id="brekidanci" style="position: absolute; top: 0px; height: 160px;" src="{{ url_for('static', filename='images/breakdance-cat.gif') }}">
+    
 </body>
 
 <script>
